# context-data-schemas

./: .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: migrate.yml
common/: article_contract.json
rds_postgres/: alembic.ini  connection.py  models.py
rds_postgres/alembic/: env.py
rds_postgres/alembic/versions/: 66daf4c8e3b7_initial_schema.py
