[tool.poetry]
name = "context-data-schemas"
version = "0.1.0"
description = "Shared data schemas and migrations"
authors = ["Context News <dev@context.news>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
